--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Working with async on Js",
   "main": "src/index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "callback" : "node src/callback/index.js"
   },
   "keywords": [
     "promises",
