--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "Working with async on Js",
   "main": "src/index.js",
   "scripts": {
-    "callback" : "node src/callback/index.js"
+    "callback": "node src/callback/index.js",
+    "callback:challenge": "node src/callback/challenge.js"
+
   },
   "keywords": [
     "promises",
@@ -12,5 +14,8 @@
     "async"
   ],
   "author": "carticss",
-  "license": "ISC"
+  "license": "ISC",
+  "dependencies": {
+    "xmlhttprequest": "^1.8.0"
+  }
 }
